test/type-error-6.err.expect
test/type-error-6.ktn:3:1: error: expected scalar type int but got [t1]
test/type-error-6.ktn:1:19: note: [t1] (output of myAddVector) is from here
test/type-error-6.ktn:3:11: note: int (from bar) is from here

test/type-error-6.ktn:3:1: error: expected stack type s2... int but got s1... [t1]

test/type-error-6.ktn:3:1: error: expected scalar type (s2... [t2] [char] -> s2... int) but got (s1... [t1] t1 -> s1... [t1])
test/type-error-6.ktn:3:34: note: (s1... [t1] t1 -> s1... [t1]) is from here
test/type-error-6.ktn:1:19: note: [t1] (input to myAddVector) is from here
test/type-error-6.ktn:4:12: note: t1 (type of x) is from here
test/type-error-6.ktn:3:11: note: (s2... [t2] [char] -> s2... int) is from here
test/type-error-6.ktn:3:11: note: [t2] (input to bar) is from here
test/type-error-6.ktn:3:11: note: [char] (input to bar) is from here
