test/type-error-6.ktn
define myAddVector<a> ([a] [a] -> [a]): __add_vector

define bar<a> ([a] [char] -> int):
  ->x; [x] myAddVector
